# xcord

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: xcord.hpp
include/xcord/: client.hpp  discord.hpp  export.hpp  user.hpp  util.hpp  websocket.hpp
src/: client.cpp  discord.cpp  inflator.cpp  user.cpp  util.cpp  websocket.cpp
unittest/: CMakeLists.txt
